# megu-gfycat

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
docs/source/: conf.py  getting-started.rst  index.rst  megu_gfycat.rst
src/megu_gfycat/: __init__.py  api.py  constants.py  guesswork.py  helpers.py  utils.py
src/megu_gfycat/plugins/: __init__.py  basic.py
